<resources>
    <string name="app_name">Expends</string>

    <!-- Strings para tela Inicial -->
    <string name="btnCadastro"><b>Cadastrar</b></string>
    <string name="btnEntrar">Entrar</string>

    <!-- Strings para os Dropdowns -->
    <string name="dia_prompt">Dia</string>
    <string name="mes_prompt">Mês</string>
    <string name="ano_prompt">Ano</string>

    <!-- Strings para os campos de EditText -->
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirmar_senha">Confirmar a Senha</string>
    <string name="hint_renda_mensal">Sua Renda Mensal</string>
    <string name="esqueci_minha_senha"><u>Esqueci minha senha</u></string>
    <string name="hint_recuperacao_email"><b>Insira o seu email para recuperação</b></string>
    <string name="enviado_email"><b>Enviamos um email de recuperação,\nPor favor confira o seu email</b></string>
    <string name="hint_nome">Nome</string>
    <string name="data_de_nascimento">Data de nascimento:</string>

    <string name="label_description">Descrição:</string>
    <string name="hint_description">Descrição...</string>
    <string name="save">Salvar</string>
    <string name="data_do_lancamento">Data do Lançamento:</string>
    <string name="tipo">Tipo</string>
    <string name="label_value">Valor:</string> <!-- Adicionado aqui -->
    <string name="hint_value">R$ 0,00</string>
    <string name="sair_da_conta">Sair da Conta</string>
    <string name="deletar_conta">Deletar Conta</string> <!-- Adicionado aqui -->

    <item name="saveButton" type="id" />
    <item name="descriptionLabel" type="id" />
    <item name="descriptionEditText" type="id" />
    <item name="dataDoLancamentoLabel" type="id" />
    <item name="typeSpinner" type="id" />
    <item name="typeLabel" type="id" />
    <item name="valueLabel" type="id" />
    <item name="valueEditText" type="id" />
</resources>
